--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
             type="text"
             class="form-control"
             id="search_box"
-            value="black shirt for men under 500"
+            value="Black Jeans and Red Top of Size M"
           />
         </div>
         <button
@@ -47,11 +47,11 @@
       <div class="col"></div>
     </div>
     <div class="row mt-2">
-      <div class="col"></div>
+      <div class="col-2"></div>
       <div class="col">
-        <p id="result" class="h3"></p>
+        <p id="result"></p>
       </div>
-      <div class="col"></div>
+      <div class="col-2"></div>
     </div>
   </body>
 </html>
